erDiagram
    PAIS ||--o{ SITIOWEB : opera
    MARCAIA ||--o{ SITIOWEB : impulsa
    PAIS ||--o{ CLIENTEFINAL : reside
    SITIOWEB ||--o{ ORDENVENTA : genera
    CLIENTEFINAL ||--o{ ORDENVENTA : compra
    ORDENVENTA ||--o{ ORDENVENTADETALLE : detalla
    COURIEREXTERNO ||--o{ DESPACHO : ejecuta
    ORDENVENTA ||--o{ DESPACHO : despacha
    SITIOWEB ||--o{ COSTOSITIO : incurre
